# sqlite-viewer-qt

./: .gitignore  CMakeLists.txt  README.md  consoleshell.hpp  dbutils.cpp  dbutils.hpp  guishell.cpp  guishell.hpp  main.cpp  shell.hpp  shellfactory.hpp  sqlitewrapper.hpp  tableview.cpp  tableview.hpp  widget.cpp  widget.hpp
